@@ -15,6 +15,7 @@ Verion 1.5.3
 * Change RPM name to vlbi-mark5access.*.rpm
 * New option in test5b: can supply frames per second and then the true number of skipped frames can be evaluated.
 * fixmark5b: don't seg fault if can't open files
+* Many utilities: change from use of signal() to sigaction(), which is supposed to be more reliable.
 
 Version 1.5.2
 * Post DiFX-2.4
